Fixed width issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -617,7 +617,7 @@ footer{
           margin:0px 0 10px 0;
           position: relative;
       }
-      .news-row.row, .news-strip .row{
+      .seehow-copy.row, .news-row.row, .news-strip .row{
         margin-left:0px;
         margin-right:0px;
       }
